# bioprep

./: Cargo.toml  README.md  dist-workspace.toml  res.bedpe.tsv
examples/: serialise_structural_variants.rs
src/: breakend.rs  config.rs  constants.rs  conversions.rs  error.rs  io.rs  lib.rs  main.rs  parsers.rs  pubtypes.rs  seqlibutils.rs  stats.rs  tally.rs  tallytypes.rs  vcfutils.rs
testfiles/: idxstats.tsv  vcf.bedpe
testfiles/standardised/: breakends.tsv  breakpoints.bedpe.tsv  mutations.tsv
