[package]
name = "bioprep"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/selkamand/svcf"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
noodles = { version = "0.109.0", features = ["vcf"] }
thiserror = "2.0.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
