[package]
name = "bioprep"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/selkamand/bioprep"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
noodles = { version = "0.109.0", features = ["vcf"] }
seqlib = { git = "https://github.com/selkamand/seqlib", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
